[gd_scene load_steps=2 format=2]

[ext_resource path="res://game/scripts/ui/menu/pause_menu.gd" type="Script" id=1]

[node name="pause_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -29.0
margin_top = 142.0
margin_right = 49.0
margin_bottom = 156.0
text = "Pause Menu"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 62.0
margin_top = 106.0
margin_right = 168.0
margin_bottom = 174.0

[node name="btn_resume" type="Button" parent="VBoxContainer"]
margin_right = 106.0
margin_bottom = 20.0
text = "Resume Game"

[node name="btn_settings" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 106.0
margin_bottom = 44.0
text = "Settings"

[node name="btn_exit" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 106.0
margin_bottom = 68.0
text = "Exit"

[connection signal="pressed" from="VBoxContainer/btn_resume" to="." method="_on_btn_resume_pressed"]
[connection signal="pressed" from="VBoxContainer/btn_settings" to="." method="_on_btn_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/btn_exit" to="." method="_on_btn_exit_pressed"]
