extends Control

onready var btn_resume_game = null
onready var btn_setting = null
onready var btn_exit = null

func _ready():
	pass
	
	

func _on_btn_resume_pressed():
	pass # Replace with function body.


func _on_btn_settings_pressed():
	pass # Replace with function body.


func _on_btn_exit_pressed():
	get_tree().quit()


